# lally

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: build.yml  ci.yml  lint.yml
nix/flake/: devshell.nix  pre-commit.nix  rust.nix
proto/: lally.proto  membership.proto
src/: cli.rs  cluster.rs  config.rs  hooks.rs  http_server.rs  kv.rs  kv_store.rs  lally.rs  main.rs  server.rs  types.rs  utils.rs  wal.rs
src/cluster/: server.rs
src/hooks/: aof.rs  wal.rs
src/lally/: config.rs  connnection.rs  hook.rs  pool.rs  store.rs
src/utils/: timestamp.rs
