[package]
name = "lally"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.12.3"

[dependencies]
anyhow = "1.0.94"
argh = "0.1.13"
axum = "0.7.9"
axum-macros = "0.4.2"
chrono = "0.4.39"
crossbeam = "0.8.4"
dashmap = "6.1.0"
directories = "6.0.0"
futures = "0.3.31"
prost = "0.13.4"
prost-types = "0.13.4"
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.134"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"
