[package]
name = "lally"
version = "0.1.0"
edition = "2021"
description = "Lally is a distributed, in-memory key-value database built with Rust and Tokio, inspired by DynamoDB, prioritizing high availability, concurrency, extendability, and crash recovery via append-only logging"
documentation = "https://github.com/lovelindhoni/lally"
repository = "https://github.com/lovelindhoni/lally"
homepage = "https://github.com/lovelindhoni/lally"
readme = "README.md"
license = "MIT"
keywords = ["kv-store", "db"]
publish = false

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
strip = true

[build-dependencies]
tonic-build = "0.12.3"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.94"
argh = "0.1.13"
chrono = "0.4.39"
crossbeam = "0.8.4"
dashmap = "6.1.0"
directories = "6.0.0"
prost = "0.13.4"
prost-types = "0.13.4"
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.134"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
